Changed wording on some text in the list

--- a/top5list V2.html
+++ b/top5list V2.html
@@ -83,7 +83,8 @@ because we are now in the CSS Zone */
 				
 					<li class="blue-text">Caught up on my favorite shows</li>
 					
-					<li> I made friends with an online killer whale </li>	
+					<li> I made friends with an online killer whale named OCTAVIUS THE GREAT </li>	
+			
 				</ul>
 					<object width="750" height="800">
 
